# coursework_6

./: .gitignore  README.md  pyproject.toml  pytest.ini
ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
market_postgres/: docker-compose.yaml
skymarket/: settings.py  urls.py
tests/: confest.py  conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_view_test.py  ads_retrieve_view_test.py
tests/comments/: comment_create_test.py  comment_destroy_test.py  comment_retrieve_test.py
users/: admin.py  managers.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py
